added the exit button to end the game and take user back to the main screen

--- a/lab-2/css/style.css
+++ b/lab-2/css/style.css
@@ -176,3 +176,9 @@ body{
 	/* Sets the width of the image to the width of the container */
 	width: 100%;
 }
+
+/* CSS for the exit button */
+.gameEnd{
+      	display: none;
+}
+
