Add keypress event listener for player selection
Adds a keypress event listener listening for a and l, to determine whether player 1 or player 2 will select cards that make a set respectively.
Adds a container with instructions on these controls.
Adds a pick card reminder that says which player is picking and how many more cards they have to select.

--- a/lab-2/css/style.css
+++ b/lab-2/css/style.css
@@ -182,3 +182,12 @@ body{
       	display: none;
 }
 
+/* CSS for the control instructions */
+.playerControlInstructions{
+    display: none;
+}
+
+/* CSS for the player pick cards message */
+.playerPickCards {
+    display: none;
+}
