Added the ending screen for the game. Added the player scores to show up while playing. Added displaying the winner when game ends.

--- a/lab-2/css/style.css
+++ b/lab-2/css/style.css
@@ -371,3 +371,11 @@ input{
 	/* Changes the background color of the button to red */
 	background-color: #bb0000;
 }
+
+.gameEndingMessage{
+	display: none;
+}
+
+.scoreContainer{
+	display: none;
+}
