--- a/lab-3/app/views/layouts/application.html.erb
+++ b/lab-3/app/views/layouts/application.html.erb
@@ -10,6 +10,11 @@
   </head>
 
   <body>
+    <p class="notice"><%= notice %></p>
+    <p class="alert"><%= alert %></p>
+
+    <%= render 'home/header' %>
+
     <%= yield %>
   </body>
 </html>
