Added drop down to sign up page so user can select if they are TA, Staff, or Admin. This is not currently linked to the model it's purely cosmetic right now.

--- a/lab-3/app/views/devise/registrations/new.html.erb
+++ b/lab-3/app/views/devise/registrations/new.html.erb
@@ -21,6 +21,20 @@
     <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
   </div>
 
+  
+  <div class="field">
+    <form>
+      <label>Choose Status:</label>
+      <select>
+        <option>TA</option>
+        <option>Staff</option>
+        <option>Admin</option>
+      </select>
+      </form>
+  </div>
+
+
+
   <div class="actions">
     <%= f.submit "Sign up" %>
   </div>
