Changed homepage so different text is displayed on screen when user is logged in vs logged out. Feel free to change the text here.

--- a/lab-3/app/views/home/index.html.erb
+++ b/lab-3/app/views/home/index.html.erb
@@ -1,1 +1,8 @@
-This is our homepage!
+<% if !user_signed_in? %>
+</br>This will be displayed if user not signed in.
+<%end%>
+
+<% if user_signed_in? %>
+</br>This will be displayed if user signed in.
+<%end%>
+
