Changed course_id to course_number in the courses model. deleted course_id column from the sections model and then added a reference to the courses model to the sections model. Removed the section_number column from the meetings model and then added a reference to the sections model. Removed the custom foreign keys from all the models so that the models can use the default foreign keys Changed the views and the controllers to use the updated columns

--- a/lab-3/app/views/sections/_form.html.erb
+++ b/lab-3/app/views/sections/_form.html.erb
@@ -37,8 +37,8 @@
   </div>
 
   <div class="field">
-    <%= form.label :course_id %>
-    <%= form.number_field :course_id %>
+    <%= form.label :courses_id %>
+    <%= form.number_field :courses_id %>
   </div>
 
   <div class="actions">
