--- a/lab-3/app/views/courses/_form.html.erb
+++ b/lab-3/app/views/courses/_form.html.erb
@@ -22,8 +22,8 @@
   </div>
 
   <div class="field">
-    <%= form.label :course_id %>
-    <%= form.number_field :course_id %>
+    <%= form.label :course_number %>
+    <%= form.text_field :course_number %>
   </div>
 
   <div class="actions">
