--- a/lab-3/app/views/courses/index.html.erb
+++ b/lab-3/app/views/courses/index.html.erb
@@ -8,6 +8,7 @@
       <th>Course description</th>
       <th>Course title</th>
       <th>Course</th>
+      <th>Id</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -17,7 +18,8 @@
       <tr>
         <td><%= course.course_description %></td>
         <td><%= course.course_title %></td>
-        <td><%= course.course_id %></td>
+        <td><%= course.course_number %></td>
+        <td><%= course.id %></td>
         <td><%= link_to 'Show', course %></td>
         <td><%= link_to 'Edit', edit_course_path(course) %></td>
         <td><%= link_to 'Destroy', course, method: :delete, data: { confirm: 'Are you sure?' } %></td>
