--- a/lab-3/app/views/meetings/index.html.erb
+++ b/lab-3/app/views/meetings/index.html.erb
@@ -33,7 +33,7 @@
         <td><%= meeting.saturday %></td>
         <td><%= meeting.sunday %></td>
         <td><%= meeting.location %></td>
-        <td><%= meeting.section_number %></td>
+        <td><%= meeting.sections_id %></td>
         <td><%= link_to 'Show', meeting %></td>
         <td><%= link_to 'Edit', edit_meeting_path(meeting) %></td>
         <td><%= link_to 'Destroy', meeting, method: :delete, data: { confirm: 'Are you sure?' } %></td>
