--- a/lab-3/app/views/sections/index.html.erb
+++ b/lab-3/app/views/sections/index.html.erb
@@ -11,6 +11,7 @@
       <th>Start date</th>
       <th>End date</th>
       <th>Course</th>
+      <th>Id</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -23,7 +24,8 @@
         <td><%= section.component %></td>
         <td><%= section.start_date %></td>
         <td><%= section.end_date %></td>
-        <td><%= section.course_id %></td>
+        <td><%= section.courses_id %></td>
+        <td><%= section.id %></td>
         <td><%= link_to 'Show', section %></td>
         <td><%= link_to 'Edit', edit_section_path(section) %></td>
         <td><%= link_to 'Destroy', section, method: :delete, data: { confirm: 'Are you sure?' } %></td>
