Added the ascending order sorting based on the course number. Did some cleanup and removed some information not needed for TA view. Added the filter so that TA can select to only view 1xxx courses. Will add the other filters and comments soon. Updated the courses model for sorting and filtering. Will add the link as a comment to show where the piece of obtained from for filtering.

--- a/lab-3/app/views/home/index.html.erb
+++ b/lab-3/app/views/home/index.html.erb
@@ -8,10 +8,9 @@
     <%end%>
     <% if current_user.user_type == 'Admin' %>
         This is what admin users will see.
-    <%end%>
-    <% if current_user.user_type == 'TA' %>
-        This is what TA users will see.
-    <%end%>
+      <%end%>
+
+      <%= render 'course' %>
 
     </br>This will be displayed if user signed in.
 <%end%>
