--- a/lab-3/app/views/instructors/show.html.erb
+++ b/lab-3/app/views/instructors/show.html.erb
@@ -16,4 +16,4 @@
 </p>
 
 <%= link_to 'Edit', edit_instructor_path(@instructor) %> |
-<%= link_to 'Back', instructors_path %>
+<%= link_to 'Back', @instructor.meeting %>
