--- a/lab-3/app/views/courses/show.html.erb
+++ b/lab-3/app/views/courses/show.html.erb
@@ -1,18 +1,18 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Course description:</strong>
-  <%= @course.course_description %>
-</p>
+  <strong>Course Number:</strong>
+  <%= @course.course_number %>
+</p>  
 
 <p>
-  <strong>Course title:</strong>
+  <strong>Course Title:</strong>
   <%= @course.course_title %>
 </p>
 
 <p>
-  <strong>Course:</strong>
-  <%= @course.course_id %>
+  <strong>Course Description:</strong>
+  <%= @course.course_description %>
 </p>
 
 <table>
@@ -23,8 +23,7 @@
       <th>Component</th>
       <th>Start date</th>
       <th>End date</th>
-      <th>Course</th>
-      <th>Id</th>
+      <th>More info</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -37,15 +36,16 @@
         <td><%= section.component %></td>
         <td><%= section.start_date %></td>
         <td><%= section.end_date %></td>
-        <td><%= section.courses_id %></td>
-        <td><%= section.id %></td>
         <td><%= link_to 'Show', section %></td>
-        <td><%= link_to 'Edit', edit_section_path(section) %></td>
-        <td><%= link_to 'Destroy', section, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+
+        <% if current_user.user_type == 'Admin' %>
+          <td><%= link_to 'Edit', edit_section_path(section) %></td>
+          <td><%= link_to 'Destroy', section, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <%end%>
       </tr>
     <% end %>
   </tbody>
 </table>
 
 <%= link_to 'Edit', edit_course_path(@course) %> |
-<%= link_to 'Back', courses_path %>
+<%= link_to 'Back', home_index_path %>
