--- a/lab-3/app/views/sections/index.html.erb
+++ b/lab-3/app/views/sections/index.html.erb
@@ -10,8 +10,7 @@
       <th>Component</th>
       <th>Start date</th>
       <th>End date</th>
-      <th>Course</th>
-      <th>Id</th>
+      <th>Course</th> 
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -25,10 +24,15 @@
         <td><%= section.start_date %></td>
         <td><%= section.end_date %></td>
         <td><%= section.courses_id %></td>
-        <td><%= section.id %></td>
-        <td><%= link_to 'Show', section %></td>
-        <td><%= link_to 'Edit', edit_section_path(section) %></td>
-        <td><%= link_to 'Destroy', section, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+
+        <td> <%= link_to 'Show', section %></td>
+        <% if user_signed_in? %>
+          <% if current_user.user_type == 'Admin' %>
+            <td><%= link_to 'Show', section %></td>
+            <td><%= link_to 'Edit', edit_section_path(section) %></td>
+            <td><%= link_to 'Destroy', section, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          <%end%>
+        <%end%>
       </tr>
     <% end %>
   </tbody>
