--- a/lab-3/app/views/sections/show.html.erb
+++ b/lab-3/app/views/sections/show.html.erb
@@ -67,14 +67,18 @@
         <td><%= meeting.saturday %></td>
         <td><%= meeting.sunday %></td>
         <td><%= meeting.location %></td>
-        <td><%= meeting.sections_id %></td>
-        <td><%= link_to 'Show', meeting %></td>
-        <td><%= link_to 'Edit', edit_meeting_path(meeting) %></td>
-        <td><%= link_to 'Destroy', meeting, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'More info', meeting %></td>
+ 
+        <%if current_user.user_type == 'Admin' %>
+          <td><%= link_to 'Edit', edit_meeting_path(meeting) %></td>
+          <td><%= link_to 'Destroy', meeting, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <%end%>
       </tr>
     <% end %>
   </tbody>
 </table>
 
-<%= link_to 'Edit', edit_section_path(@section) %> |
-<%= link_to 'Back', sections_path %>
+<% if current_user.user_type == 'Admin' %>
+  <%= link_to 'Edit', edit_section_path(@section) %> |
+<%end%>  
+<%= link_to 'Back', @section.course %>
