Removed the unecessary files for the TA view that I had created earlier. Added the filters for 1xxx, 2xxx, 3xxx, etc courses so the TA can choose to only look at those courses.

--- a/lab-3/app/views/home/_course.html.erb
+++ b/lab-3/app/views/home/_course.html.erb
@@ -1,6 +1,19 @@
 <p id="notice"><%= notice %></p>
 
-<a href="/?starts_with=1">1xxx</a>
+<h4>Filter by: </h4>
+<table>
+  <tr>
+    <th><a href="/?starts_with=1">1xxx</a></th>
+    <th><a href="/?starts_with=2">2xxx</a></th>
+    <th><a href="/?starts_with=3">3xxx</a></th>
+    <th><a href="/?starts_with=4">4xxx</a></th>
+    <th><a href="/?starts_with=5">5xxx</a></th>
+    <th><a href="/?starts_with=6">6xxx</a></th>
+    <th><a href="/?starts_with=7">7xxx</a></th>
+    <th><a href="/?starts_with=8">8xxx</a></th>
+  </tr>
+</table>
+
 <h1>Courses</h1>
 
 <table>
