--- a/lab-3/app/views/home/_course.html.erb
+++ b/lab-3/app/views/home/_course.html.erb
@@ -1,5 +1,6 @@
-<p id="notice"><%= notice %></p>
-
+<% if current_user.user_type == 'Admin' %>
+  <%= link_to 'Rescrape', home_rescrape_path, method: :rescrape, data: { confirm: 'Are you sure?' } %>
+<% end %>
 <h4>Filter by: </h4>
 <table>
   <tr>
@@ -15,48 +16,50 @@
 </table>
 
 <h1>Courses</h1>
+<% if current_user.user_type == 'Admin' %>
+  <%= link_to 'Add a new Course', new_course_path %>
+<%end%>
 
 <table>
   <thead>
     <tr>
-      <% if user_signed_in? %>
-        <% if current_user.user_type == 'TA' %>
-          <th>Course Number</th>
-          <th>Course title</th>
-          <th>Course Description</th>
-          <th>Grade Requirement</th>
-          <th>Sections</th>
-        <%end%>
-      <%end%>
-
-      <% if user_signed_in? %>
-        <% if current_user.user_type == 'Admin' %>
-          <th colspan="3"></th>
-        <%end%>
+      <% if current_user.user_type == 'Admin' %>
+        <th>Course ID</th>
+      <% end %>
+      <th>Course Number</th>
+      <th>Course title</th>
+      <th>Course Description</th>
+      <% if current_user.user_type == 'TA' %>
+        <th>Grade Requirement</th>
+      <% end %>
+      <th>Sections</th>
+      <% if current_user.user_type == 'Admin' %>
+        <th colspan="3"></th>
       <%end%>
     </tr>
   </thead>
 
   <tbody>
       <% @courses.each do |course| %>
-        <% if user_signed_in? %>
+        <tr>
+          <% if current_user.user_type = 'admin' %>
+            <td><%= course.id %></td>
+          <% end %>
+          <td><%= course.course_number %></td>
+          <td><%= course.course_title %></td>
+          <td><%= course.course_description %></td>
           <% if current_user.user_type == 'TA' %>
-            <tr>
-              <td><%= course.course_number %></td>
-              <td><%= course.course_title %></td>
-              <td><%= course.course_description %></td>
-              <td><%= 'A' %></td>
-              <td><%= link_to 'Show Sections', course %></td>
-            </tr>
-          <%end%>
-        <%end%>
+            <td><%= 'A' %></td>
+          <% end %>
+          <td><%= link_to 'Show Sections', course %></td>
+          <% if current_user.user_type = 'admin' %>
+            <td><%= course.id %></td>
+            <td><%= link_to 'Edit Course', edit_course_path(course) %></td>
+            <td><%= link_to 'Delete Course', course, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          <% end %>
+        </tr>
       <%end%>
   </tbody>
 </table>
 
 <br>
-<% if user_signed_in? %>
-  <% if current_user.user_type == 'Admin' %>
-    <%= link_to 'New Course', new_course_path %>
-  <%end%>
-<%end%>
