--- a/lab-3/app/views/home/index.html.erb
+++ b/lab-3/app/views/home/index.html.erb
@@ -1,17 +1,8 @@
 <% if !user_signed_in? %>
-    </br>This will be displayed if user not signed in.
+    </br>Please sign in or sign up to continue!!!!
 <%end%>
 
 <% if user_signed_in? %>
-    <% if current_user.user_type == 'Staff' %>
-        This is what staff users will see.
-    <%end%>
-    <% if current_user.user_type == 'Admin' %>
-        This is what admin users will see.
-      <%end%>
-
-      <%= render 'course' %>
-
-    </br>This will be displayed if user signed in.
+<%= render 'course' %>
 <%end%>
 
