--- a/lab-3/app/assets/stylesheets/home.scss
+++ b/lab-3/app/assets/stylesheets/home.scss
@@ -1,3 +1,10 @@
 // Place all the styles related to the home controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+#searchBar{
+	width: 25vw;
+	text-align: center;
+}
+th{
+	padding: 10px;
+}
