--- a/lab-3/app/views/sections/show.html.erb
+++ b/lab-3/app/views/sections/show.html.erb
@@ -1,55 +1,43 @@
-<p id="notice"><%= notice %></p>
+<p id="notice"><%= notice %></p
 
+<%# display the section number %>
 <p>
   <strong>Section number:</strong>
   <%= @section.section_number %>
 </p>
 
+<%# display the class number %>
 <p>
   <strong>Class number:</strong>
   <%= @section.class_number %>
 </p>
 
+<%# display the section component %>
 <p>
   <strong>Component:</strong>
   <%= @section.component %>
 </p>
 
+<%# display the start date for the section %>
 <p>
   <strong>Start date:</strong>
   <%= @section.start_date %>
 </p>
 
+<%# display the end date for the section %>
 <p>
   <strong>End date:</strong>
   <%= @section.end_date %>
 </p>
-
-<p>
-  <strong>Course:</strong>
-  <%= @section.course_id %>
-</p>
-
-<p>
-  <strong>Id:</strong>
-  <%= @section.id %>
-</p>
-
 
 <table>
   <thead>
     <tr>
       <th>Start time</th>
       <th>End time</th>
-      <th>Monday</th>
-      <th>Tuesday</th>
-      <th>Wednesday</th>
-      <th>Thursday</th>
-      <th>Friday</th>
-      <th>Saturday</th>
-      <th>Sunday</th>
+      <th>Class Days</th>
       <th>Location</th>
-      <th>Section</th>
+      <th>More Info</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -57,17 +45,38 @@
   <tbody>
     <% @section.meetings.each do |meeting| %>
       <tr>
-        <td><%= meeting.start_time %></td>
-        <td><%= meeting.end_time %></td>
-        <td><%= meeting.monday %></td>
-        <td><%= meeting.tuesday %></td>
-        <td><%= meeting.wednesday %></td>
-        <td><%= meeting.thursday %></td>
-        <td><%= meeting.friday %></td>
-        <td><%= meeting.saturday %></td>
-        <td><%= meeting.sunday %></td>
+        <%# display times for each section of the class in HH:MM format %>
+        <td><%= meeting.start_time.strftime('%I:%M %p') unless meeting.start_time.nil? %></td>
+        <td><%= meeting.end_time.strftime('%I:%M %p') unless meeting.start_time.nil? %></td>
+
+        <%# check for class days %>
+        <% str = "" %>
+        <% if meeting.monday%>
+          <% str = str + "M" %>
+        <%end%>
+        <% if meeting.tuesday %>
+          <% str = str + "T" %>
+        <%end%>
+        <% if meeting.wednesday %>
+          <% str = str + "W" %>
+        <%end%>
+        <% if meeting.thursday %>
+          <% str = str + "TH" %>
+        <%end%>
+        <% if meeting.friday  %>
+          <% str = str + "F" %>
+        <%end%>
+
+        <%# Days of the week is not listed yet so it will TBA %>
+        <% if str.length == 0 %>
+          <% str = "TBA" %>
+        <%end%>
+
+        <%# print class days %>
+        <td><%= str %></td>
+        <%# print location of meeing %>
         <td><%= meeting.location %></td>
-        <td><%= link_to 'More info', meeting %></td>
+        <td><%= link_to 'Show', meeting %></td>
  
         <%if current_user.user_type == 'Admin' %>
           <td><%= link_to 'Edit', edit_meeting_path(meeting) %></td>
