--- a/lab-3/app/views/home/_course.html.erb
+++ b/lab-3/app/views/home/_course.html.erb
@@ -1,8 +1,12 @@
 <hr \>
+
+<%# button to rescrape the website for admin %>
 <% if current_user.user_type == 'Admin' %>
   <%= link_to 'Rescrape', home_rescrape_path, method: :rescrape, data: { confirm: 'Are you sure?' } %>
   <hr \>
 <% end %>
+
+<%# User can filter the courses by course level or search for course by title %>
 <h4>Filter by: </h4>
 <table>
   <tr>
@@ -23,11 +27,14 @@
 <hr />
 <h1>Courses</h1>
 <hr />
+
+<%# Allow admin to add a new course to course list %>
 <% if current_user.user_type == 'Admin' %>
   <%= link_to 'Add a new Course', new_course_path %>
   <hr />
 <%end%>
 
+<%# Show course information for all CSE courses offered in spring 2022 %>
 <table>
   <thead>
     <tr>
@@ -37,6 +44,7 @@
       <th>Course Number</th>
       <th>Course title</th>
       <th>Course Description</th>
+      <%# Show the grade requirement to be TA for a class %>
       <% if current_user.user_type == 'TA' %>
         <th>Grade Requirement</th>
       <% end %>
@@ -50,7 +58,7 @@
   <tbody>
       <% @courses.each do |course| %>
         <tr>
-          <% if current_user.user_type = 'admin' %>
+          <% if current_user.user_type == 'Admin' %>
             <td><%= course.id %></td>
           <% end %>
           <td><%= course.course_number %></td>
@@ -59,8 +67,11 @@
           <% if current_user.user_type == 'TA' %>
             <td><%= 'A' %></td>
           <% end %>
+          <%# button/link to show more information about the a particular course %>
           <td><%= link_to 'Show Sections', course %></td>
-          <% if current_user.user_type = 'admin' %>
+          
+          <%# Allow admin to make changes to different courses like editing and deleting %>
+          <% if current_user.user_type == 'Admin' %>
             <td><%= link_to 'Edit Course', edit_course_path(course) %></td>
             <td><%= link_to 'Delete Course', course, method: :delete, data: { confirm: 'Are you sure?' } %></td>
           <% end %>
