Add scrape options
Adds scrape options:
Campus: to select campus (at the moment, only Columbus has CSE classes
Career: Undergraduate/Graduate
Term: Current and next terms with their corresponding term id

--- a/lab-3/app/views/home/_course.html.erb
+++ b/lab-3/app/views/home/_course.html.erb
@@ -2,7 +2,8 @@
 
 <%# button to rescrape the website for admin %>
 <% if current_user.user_type == 'Admin' %>
-  <%= link_to 'Rescrape', home_rescrape_path, method: :rescrape, data: { confirm: 'Are you sure?' } %>
+<%# , method: :rescrape, data: { confirm: 'Are you sure?' }%>
+  <%= link_to 'Rescrape', home_scrapeoptions_path%>
   <hr \>
 <% end %>
 
