Fixed bugs related to double notice messages and back button on certain pages taking you to another page than intended Fixed bugs related to creating new sections/meetings/instructors from the admin view Removed unnecessary columns from the meetings and sections tables Removed unnecessary routes Removed unnecessary code from the courses controller Made it so that pages now check for user being logged in, and if the user is not logged in, it redirects back to the root page Added Comments

--- a/lab-3/app/views/meetings/_form.html.erb
+++ b/lab-3/app/views/meetings/_form.html.erb
@@ -62,8 +62,8 @@
   </div>
 
   <div class="field">
-    <%= form.label :section_number %>
-    <%= form.text_field :section_number %>
+    <%= form.label :section_id %>
+    <%= form.text_field :section_id %>
   </div>
 
   <div class="actions">
