--- a/lab-3/app/views/courses/show.html.erb
+++ b/lab-3/app/views/courses/show.html.erb
@@ -1,5 +1,3 @@
-<p id="notice"><%= notice %></p>
-
 <p>
   <strong>Course Number:</strong>
   <%= @course.course_number %>
@@ -46,10 +44,15 @@
         <%end%>
       </tr>
     <% end %>
+    <% if current_user.user_type == 'Admin' %>
+      <tr>
+        <td><%= link_to 'New Section', new_section_path %></td>
+      </tr>  
+    <% end %>
   </tbody>
 </table>
 
 <% if current_user.user_type == 'Admin' %>
-  <%= link_to 'Edit', edit_course_path(@course) %> |
+  <%= link_to 'Edit', edit_course_path(@course) %>
 <%end%>
 <%= link_to 'Back', home_index_path %>
