--- a/lab-3/app/views/meetings/show.html.erb
+++ b/lab-3/app/views/meetings/show.html.erb
@@ -1,5 +1,3 @@
-<p id="notice"><%= notice %></p>
-
 <%# Display the start time for the meeting in HH:MM format %>
 <p>
   <strong>Start time:</strong>
@@ -70,6 +68,11 @@
           <td><%= link_to 'Destroy', instructor, method: :delete, data: { confirm: 'Are you sure?' } %></td>
         <%end%>
       </tr>
+    <% end %>
+    <% if current_user.user_type == 'Admin' %>
+      <tr>
+        <td><%= link_to 'New Instructor', new_instructor_path %></td>
+      </tr>  
     <% end %>
   </tbody>
 </table>
