--- a/lab-3/app/views/sections/edit.html.erb
+++ b/lab-3/app/views/sections/edit.html.erb
@@ -3,4 +3,4 @@
 <%= render 'form', section: @section %>
 
 <%= link_to 'Show', @section %> |
-<%= link_to 'Back', sections_path %>
+<%= link_to 'Back', @section.course %>
