--- a/lab-3/app/views/sections/show.html.erb
+++ b/lab-3/app/views/sections/show.html.erb
@@ -1,5 +1,3 @@
-<p id="notice"><%= notice %></p
-
 <%# display the section number %>
 <p>
   <strong>Section number:</strong>
@@ -83,6 +81,11 @@
           <td><%= link_to 'Destroy', meeting, method: :delete, data: { confirm: 'Are you sure?' } %></td>
         <%end%>
       </tr>
+    <% end %>
+    <% if current_user.user_type == 'Admin' %>
+      <tr>
+        <td><%= link_to 'New Meeting', new_meeting_path %></td>
+      </tr>  
     <% end %>
   </tbody>
 </table>
