--- a/lab-3/app/views/courses/show.html.erb
+++ b/lab-3/app/views/courses/show.html.erb
@@ -46,7 +46,7 @@
     <% end %>
     <% if current_user.user_type == 'Admin' %>
       <tr>
-        <td><%= link_to 'New Section', new_section_path %></td>
+        <td><%= link_to 'New Section', new_section_path(:prev_course_id => @course) %></td>
       </tr>  
     <% end %>
   </tbody>
