--- a/lab-3/app/views/instructors/_form.html.erb
+++ b/lab-3/app/views/instructors/_form.html.erb
@@ -27,6 +27,7 @@
   </div>
 
   <div class="actions">
+    <%= hidden_field_tag(:prev_meeting_id, @meeting) %>
     <%= form.submit %>
   </div>
 <% end %>
