--- a/lab-3/app/views/meetings/_form.html.erb
+++ b/lab-3/app/views/meetings/_form.html.erb
@@ -67,6 +67,7 @@
   </div>
 
   <div class="actions">
+    <%= hidden_field_tag(:prev_section_id, @section) %>
     <%= form.submit %>
   </div>
 <% end %>
