--- a/lab-3/app/views/sections/_form.html.erb
+++ b/lab-3/app/views/sections/_form.html.erb
@@ -42,6 +42,7 @@
   </div>
 
   <div class="actions">
+    <%= hidden_field_tag(:prev_course_id, @course) %>
     <%= form.submit %>
   </div>
 <% end %>
