Fixed the bug with scrapeData.rb where it wasn't putting the correct param for academic-career Added comments Updated readme

--- a/lab-3/app/views/meetings/_form.html.erb
+++ b/lab-3/app/views/meetings/_form.html.erb
@@ -67,6 +67,7 @@
   </div>
 
   <div class="actions">
+    <% # got this code from https://stackoverflow.com/questions/17916316/is-there-a-way-to-pass-params-when-clicking-submit-button-in-simple-form-view-in %>
     <%= hidden_field_tag(:prev_section_id, @section) %>
     <%= form.submit %>
   </div>
