--- a/lab-3/app/views/instructors/_form.html.erb
+++ b/lab-3/app/views/instructors/_form.html.erb
@@ -27,6 +27,7 @@
   </div>
 
   <div class="actions">
+    <% # got this code from https://stackoverflow.com/questions/17916316/is-there-a-way-to-pass-params-when-clicking-submit-button-in-simple-form-view-in %>
     <%= hidden_field_tag(:prev_meeting_id, @meeting) %>
     <%= form.submit %>
   </div>
