Added some comments to the views to described what the view displays. Fixed some formating and removed extra spaces.

--- a/lab-3/app/views/instructors/index.html.erb
+++ b/lab-3/app/views/instructors/index.html.erb
@@ -13,6 +13,7 @@
   </thead>
 
   <tbody>
+    <%# Display information about each instructor for a meeting in a table %>
     <% @instructors.each do |instructor| %>
       <tr>
         <td><%= instructor.instructor_name %></td>
