--- a/lab-3/app/views/meetings/index.html.erb
+++ b/lab-3/app/views/meetings/index.html.erb
@@ -21,6 +21,7 @@
   </thead>
 
   <tbody>
+    <%# Display information for each meeting in a table %>
     <% @meetings.each do |meeting| %>
       <tr>
         <td><%= meeting.start_time %></td>
