--- a/lab-3/app/views/courses/index.html.erb
+++ b/lab-3/app/views/courses/index.html.erb
@@ -14,6 +14,7 @@
   </thead>
 
   <tbody>
+    <%# Display information for each number in a table %>
     <% @courses.each do |course| %>
       <tr>
         <td><%= course.course_description %></td>
