--- a/lab-3/app/views/sections/index.html.erb
+++ b/lab-3/app/views/sections/index.html.erb
@@ -16,6 +16,7 @@
   </thead>
 
   <tbody>
+    <%# Display information for each section in a table %>
     <% @sections.each do |section| %>
       <tr>
         <td><%= section.section_number %></td>
@@ -24,8 +25,8 @@
         <td><%= section.start_date %></td>
         <td><%= section.end_date %></td>
         <td><%= section.courses_id %></td>
-
         <td> <%= link_to 'Show', section %></td>
+        
         <% if user_signed_in? %>
           <% if current_user.user_type == 'Admin' %>
             <td><%= link_to 'Show', section %></td>
