--- a/lab-4/app/views/home/_course.html.erb
+++ b/lab-4/app/views/home/_course.html.erb
@@ -26,6 +26,10 @@
 </table>
 
 <hr />
+<% if current_user.user_type == 'TA' %>
+  <%= link_to 'Grader Application Form', grader_application_new_path %>
+  <hr />
+<% end %>
 <h1>Courses</h1>
 <hr />
 
