Got form to save grader and availability objects to database. Form is NOT currently editable once made and it still needs the option to pick courses grader is interested in.

--- a/lab-4/app/views/home/_course.html.erb
+++ b/lab-4/app/views/home/_course.html.erb
@@ -27,7 +27,7 @@
 
 <hr />
 <% if current_user.user_type == 'TA' %>
-  <%= link_to 'Grader Application Form', grader_application_new_path %>
+  <%= link_to 'Grader Application Form', grader_application_path %>
   <hr />
 <% end %>
 <h1>Courses</h1>
