--- a/lab-4/app/views/grader_application/get.html.erb
+++ b/lab-4/app/views/grader_application/get.html.erb
@@ -1,4 +1,6 @@
 <%= javascript_pack_tag 'time' %>
+
+For testing purposes, ignore 
 <p>graders</p>
 <p><%= @graders.length() %></p>
 <% @graders.each do |g| %>
@@ -12,8 +14,6 @@
     <p><%= g.end_time %></p>
     <p><%= g.weekday %></p>
 <% end %>
-
-<p>hello</p>
 
 
 <h1>Grader Application</h1>
