Added link to home page in header. Added course selection dropdown to form. Course selection is NOT linked to model yet, the dropdown is purely cosmetic at this point. The form is not currently editable.

--- a/lab-4/app/views/grader_application/_form.html.erb
+++ b/lab-4/app/views/grader_application/_form.html.erb
@@ -9,8 +9,16 @@
     <%= form.text_field :major %>
 
     
+ 
+
+    
     <fieldset id="availabilities" name="availabilities" style="position:relative; padding:1em; margin-top:1em; margin-bottom:1em; border:2px black solid">
         <span style="position:absolute; left:0.5em; top:-0.75em; background:white;font-weight:bold">Available Times</span>
     </fieldset>
     <%= button_tag "Add", type: "button", onclick:"window.addNewTimeSlot()"%>
+
+    <fieldset id="courses" name="courses" style="position:relative; padding:1em; margin-top:1em; margin-bottom:1em; border:2px black solid">
+        <span style="position:absolute; left:0.5em; top:-0.75em; background:white;font-weight:bold">Courses of Interest</span>
+    </fieldset>
+    <%= button_tag "Add", type: "button", onclick:"window.addNewCourse()"%>
 <% end %>
