--- a/lab-4/app/views/grader_application/get.html.erb
+++ b/lab-4/app/views/grader_application/get.html.erb
@@ -1,4 +1,4 @@
-<%= javascript_pack_tag 'time' %>
+<%= javascript_pack_tag 'graderapp' %>
 
 For testing purposes, ignore 
 <p>graders</p>
@@ -16,6 +16,7 @@ For testing purposes, ignore
 <% end %>
 
 
+
 <h1>Grader Application</h1>
 <form action="?" method="POST">
 
@@ -23,3 +24,4 @@ For testing purposes, ignore
 <input type="submit" value="Submit">
 </form>
 <%= render 'availability'%>
+<%= render 'courseselect'%>
