--- a/lab-4/app/views/home/_header.html.erb
+++ b/lab-4/app/views/home/_header.html.erb
@@ -1,10 +1,12 @@
 <% if !user_signed_in? %>
     <%= link_to 'Sign Up', new_user_registration_path %> |
-    <%= link_to 'Sign In', new_user_session_path %> 
+    <%= link_to 'Sign In', new_user_session_path %> |
+    <%= link_to 'Home', home_index_path %><br/><br/>
 <%end%> 
 
 <% if user_signed_in? %>
     <%= link_to 'Sign Out', destroy_user_session_path, method: :delete %> |
-    <%= link_to 'Edit Profile', edit_user_registration_path %><br/><br/>
+    <%= link_to 'Edit Profile', edit_user_registration_path %> |
+    <%= link_to 'Home', home_index_path %><br/><br/>
 <%end%> 
 
