--- a/lab-4/app/views/home/_course.html.erb
+++ b/lab-4/app/views/home/_course.html.erb
@@ -30,6 +30,10 @@
   <%= link_to 'Grader Application Form', grader_application_path %>
   <hr />
 <% end %>
+
+<% if current_user.user_type == 'Staff' %>
+  <%= link_to 'Instructor Recommendation Form', recommendations_path %>
+<%end%>
 <h1>Courses</h1>
 <hr />
 
