Added the ability for the course interests selected by the graders to be saved in the database.

--- a/lab-4/app/views/grader_application/_courseselect.html.erb
+++ b/lab-4/app/views/grader_application/_courseselect.html.erb
@@ -1,7 +1,7 @@
 <div id="course_template" style="display:none; flex-direction:row; gap:1em">
 <%= fields_for :course do |c| %>
     <%= c.label :courses, 'Courses of Interest' %>   
-    <%= c.collection_select :course_title, @courses, :course_title, :course_title%>
+    <%= c.collection_select :id, @courses, :id, :course_number_with_title%>
 <% end %>
 </div>
 
