Grader form is fully editable and working. Only thing currently missing from form is way to delete available time slots and course interest slots.

--- a/lab-4/app/views/home/_course.html.erb
+++ b/lab-4/app/views/home/_course.html.erb
@@ -27,7 +27,7 @@
 
 <hr />
 <% if current_user.user_type == 'TA' %>
-  <%= link_to 'Grader Application Form', grader_application_path %>
+  <%= link_to 'Grader Application Form', grader_application_path, 'data-turbolinks' => false%>
   <hr />
 <% end %>
 
