Fixed the instructor recommendation model crashing on save bug. Added name_dot_number field to the grader model, removed grader_id from recommendations model, added grader_name_dot_number field to the recommendations model. Removed instructor_id from the recommendations model and added user_id to the recommendations model. Removed the relations for the graders model to the recommendations model and the instructors model to the recommendations model. Added a new relationship from the user model to the recommendations model, where users can have many recommendations and recommendations belongs to a user.

--- a/lab-4/app/views/recommendations/_form.html.erb
+++ b/lab-4/app/views/recommendations/_form.html.erb
@@ -5,10 +5,8 @@
     <%= form.text_field :instructor_name %>
     <%= form.label :'Grader Name' %>
     <%= form.text_field :grader_name %>
-    <%= form.label :'Instructor ID (Your Lastname.#)' %>
-    <%= form.text_field :instructor_id %>
     <%= form.label :'Grader ID (Lastname.#)' %>
-    <%= form.text_field :grader_id %>
+    <%= form.text_field :grader_name_dot_number %>
     <%= form.label :'Course title that the grader is being recommended for' %>
     <%= form.text_field :course %>
     <%= form.label :'Section Number for the course the grader is being recommended for (Enter only if you are requesting a grader for a specific section. Otherwise leave it blank)' %>
